# software-testing

./: LICENSE.txt  README.md  pyproject.toml
notebooks/: gcd-example.ipynb  gcd-tests.ipynb  gcd.ipynb  unit-tests.ipynb
src/example/: __init__.py  _lists.py
src/example/gcd/: __init__.py  _euclid.py  _numpy.py  _optimize.py  _reference.py  test_euclid.py  test_optimize.py  test_reference.py
src/gcd/: __init__.py  test_gcd.py
